Change params for new parsing code. Add method to create multiple processes.